[package]
name = "lay-mitouosc"
version = "0.1.0"
authors = ["gyu-don <takumi.kt+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
env_logger = "0.8.2"
lay = { path = "../lay" }
log = "0.4.11"
rosc = "0.4.2"
thiserror = "1.0.22"
tokio = { version = "0.3.4", features = ["full"] }
# for server binary
lay-steane = { path = "../lay-steane", optional = true }
lay-simulator-gk = { path = "../lay-simulator-gk", optional = true }

[features]
server-binary = ["lay-steane", "lay-simulator-gk"]

[[bin]]
name = "gk-server"
required-features = ["server-binary"]

[[bin]]
name = "steane-gk-server"
required-features = ["server-binary"]

[[bin]]
name = "steane-osc-server"
required-features = ["server-binary"]
