[package]
name = "lay-mitouosc"
version = "0.1.3"
authors = ["gyu-don <takumi.kt+git@gmail.com>"]
edition = "2018"
description = "OSC communication library and binary for MITOU project"
license = "Apache-2.0"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
env_logger = "0.8.2"
lay = "0.1.0"
log = "0.4.11"
rosc = "0.4.2"
thiserror = "1.0.22"
tokio = { version = "0.3.4", features = ["full"] }
# for server binary
lay-steane = { version = "0.1.1", path = "../lay-steane", optional = true }
lay-simulator-gk = { version = "0.1.0", path = "../lay-simulator-gk", optional = true }

[features]
server-binary = ["lay-steane", "lay-simulator-gk"]

[[bin]]
name = "gk-server"
required-features = ["server-binary"]

[[bin]]
name = "steane-gk-server"
required-features = ["server-binary"]

[[bin]]
name = "steane-osc-server"
required-features = ["server-binary"]
